spectec/test/elab/neg/parse-stray-printable.t
  $ ./main.exe parse-stray-printable.spectec 2>&1
  error: malformed token
    --> parse-stray-printable.spectec:3:1
    |
  3 | @
    | ^
    = source: parse
  [1]
